--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "ru.egslava.uzbek_dictionary"
+        applicationId "ru.egslava.tatar_dictionary"
         minSdkVersion 9
         targetSdkVersion 21
         versionCode 2
@@ -52,7 +52,7 @@ apt {
         androidManifestFile variant.outputs[0].processResources.manifestFile
         // if you have multiple outputs (when using splits), you may want to have other index than 0
 
-        resourcePackageName 'ru.egslava.uzbek_dictionary'
+        resourcePackageName 'ru.egslava.tatar_dictionary'
 
         // If you're using Android NBS flavors you should use the following line instead of hard-coded packageName
         // resourcePackageName android.defaultConfig.packageName
