One-language application, fixed tab names

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".themes.ChooseThemeActivity_" />
+        <activity android:name=".phrases.PhrasesActivity_" />
+
         <activity android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
