--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,15 @@ apply plugin: 'android-apt'
 def AAVersion = '3.2'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "ru.egslava.tatar_dictionary"
         minSdkVersion 9
-        targetSdkVersion 21
-        versionCode 2
-        versionName "1.2"
+        targetSdkVersion 23
+        versionCode 3
+        versionName "1.3"
     }
     buildTypes {
         release {
@@ -66,15 +66,17 @@ apt {
 dependencies {
 
 //    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.android.support:appcompat-v7:23.+'
 
 //    compile ('com.google.apis:google-api-services-analytics:+'){
 //        exclude(group: 'com.google.guava', module: 'guava-jdk5')
 //    }
 
+    compile 'com.google.android.gms:play-services:9.2.1'
+
 //    compile 'com.google.android.gms:play-services:6.5.+'
-    compile 'com.google.android.gms:play-services-base:6.5.+'
-    compile 'com.google.android.gms:play-services-ads:6.5.+'
+//    compile 'com.google.android.gms:play-services-base:6.5.+'
+//    compile 'com.google.android.gms:play-services-ads:6.5.+'
 
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'commons-io:commons-io:2.4'
