--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,10 @@ android {
         targetSdkVersion 23
         versionCode 3
         versionName "1.3"
+
+        multiDexEnabled true
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -86,4 +89,6 @@ dependencies {
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+
+    compile 'com.android.support:multidex:1.0.1'
 }
