--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,18 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
-def AAVersion = '3.2'
+//def AAVersion = '3.2'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "ru.egslava.tatar_dictionary"
+//        applicationId "ru.egslava.tatar_dictionary"
         minSdkVersion 9
         targetSdkVersion 23
         versionCode 3
         versionName "1.3"
 
-        multiDexEnabled true
+//        multiDexEnabled true
     }
 
     buildTypes {
@@ -45,31 +44,21 @@ android {
             signingConfig signingConfigs.release
         }
     }
-}
 
-
-apt {
-    arguments {
-//        androidManifestFile variant.outputs[0].processResources.manifestFile
-//        androidManifestFile variant.processResources.manifestFile
-        androidManifestFile variant.outputs[0].processResources.manifestFile
-        // if you have multiple outputs (when using splits), you may want to have other index than 0
-
-        resourcePackageName 'ru.egslava.tatar_dictionary'
-
-        // If you're using Android NBS flavors you should use the following line instead of hard-coded packageName
-        // resourcePackageName android.defaultConfig.packageName
-
-        // You can set optional annotation processing options here, like these commented options:
-        // logLevel 'INFO'
-        // logFile '/var/log/aa.log'
+    productFlavors {
+        tatar       { applicationId "ru.egslava.tatar_dictionary" }
+        azeri       { applicationId "ru.egslava.azerbaijani_dictionary" }
+        kazah       { applicationId "ru.egslava.armenian_dictionary" }
+        kirgiz      { applicationId "ru.egslava.belorussian_dictionary" }
+        tajik       { applicationId "ru.egslava.georgian_dictionary" }
+        uzbek       { applicationId "ru.egslava.kazakh_dictionary" }
     }
 }
 
 dependencies {
 
 //    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:appcompat-v7:23+'
 
 //    compile ('com.google.apis:google-api-services-analytics:+'){
 //        exclude(group: 'com.google.guava', module: 'guava-jdk5')
@@ -81,14 +70,14 @@ dependencies {
 //    compile 'com.google.android.gms:play-services-base:6.5.+'
 //    compile 'com.google.android.gms:play-services-ads:6.5.+'
 
-    compile 'org.apache.commons:commons-lang3:3.3.2'
-    compile 'commons-io:commons-io:2.4'
-    compile 'commons-collections:commons-collections:3.2.1'
-    compile 'org.chalup.microorm:microorm:0.2'
+//    compile 'org.apache.commons:commons-lang3:3.3.2'
+//    compile 'commons-io:commons-io:2.4'
+//    compile 'commons-collections:commons-collections:3.2.1'
+//    compile 'org.chalup.microorm:microorm:0.2'
 
-    apt "org.androidannotations:androidannotations:$AAVersion"
-    compile "org.androidannotations:androidannotations-api:$AAVersion"
+//    apt "org.androidannotations:androidannotations:$AAVersion"
+//    compile "org.androidannotations:androidannotations-api:$AAVersion"
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 
-    compile 'com.android.support:multidex:1.0.1'
+//    compile 'com.android.support:multidex:1.0.1'
 }
