--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 3
         versionName "1.3"
 
-//        multiDexEnabled true
+        multiDexEnabled false
     }
 
     buildTypes {
@@ -64,7 +64,9 @@ dependencies {
 //        exclude(group: 'com.google.guava', module: 'guava-jdk5')
 //    }
 
-    compile 'com.google.android.gms:play-services:9.2.1'
+    compile 'com.google.android.gms:play-services-base:9.2.1'
+    compile 'com.google.android.gms:play-services-ads:9.2.1'
+    compile 'com.google.android.gms:play-services-analytics:9.2.1'
 
 //    compile 'com.google.android.gms:play-services:6.5.+'
 //    compile 'com.google.android.gms:play-services-base:6.5.+'
