--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
 //        applicationId "ru.egslava.tatar_dictionary"
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 3
-        versionName "1.3"
+        versionCode 4
+        versionName "1.4"
 
         multiDexEnabled false
     }
@@ -39,6 +39,10 @@ android {
         }
     }
 
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
     buildTypes {
         release {
             signingConfig signingConfigs.release
