--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ android {
         azeri       { applicationId "ru.egslava.azerbaijani_dictionary" }
         kazah       { applicationId "ru.egslava.kazah_dictionary" }
         kirgiz      { applicationId "ru.egslava.kirgiz_dictionary" }
-        tajik       { applicationId "ru.egslava.tajik_dictionary" }
+        tajik       { applicationId "ru.egslava.dictionary" }
         uzbek       { applicationId "ru.egslava.uzbek_dictionary" }
     }
 }
