--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,9 @@ android {
 
     productFlavors {
         tatar       { applicationId "ru.egslava.tatar_dictionary" }
-        azeri       { applicationId "ru.egslava.azerbaijani_dictionary" }
+//        azeri       { applicationId "ru.egslava.azerbaijani_dictionary" }
         kazah       { applicationId "ru.egslava.kazah_dictionary" }
-        kirgiz      { applicationId "ru.egslava.kirgiz_dictionary" }
+//        kirgiz      { applicationId "ru.egslava.kirgiz_dictionary" }
         tajik       { applicationId "ru.egslava.dictionary" }
         uzbek       { applicationId "ru.egslava.uzbek_dictionary" }
     }
